--- a/filter/src/components/navigation/navigation.css
+++ b/filter/src/components/navigation/navigation.css
@@ -1,14 +1,31 @@
-.hamburgerNav
+.navbar
+{
+  background-color: black;
+  width:100%;
+  height:50px;
+  display:flex;
+  flex-direction:row;
+  justify-content: flex-end;
+}
+.hamburgerNav.closed
+{
+  transition: 1s;
+  display:none;
+}
+.hamburgerNav.open
 {
   width:60vw;
   height:80vh;
-  background-color: gray;
-  opacity: 0.6;
+  background-color: black;
+  opacity: 0.8;
+  z-index: 1000;
+  margin-top: 50px;
 }
 .hamburgerIcon
 {
   background-color: white;
-  width:50px;
+  padding:10px;
+  position: absolute;
 }
 .hamburgerNav a
 {
@@ -16,10 +33,4 @@
   display:block;
   color: white;
   padding:20px;
-}
-.navbar {
-  background-color: black;
-  width:100%;
-  height:50px;
-
 }
