--- a/filter/src/components/button/button.css
+++ b/filter/src/components/button/button.css
@@ -5,9 +5,9 @@
   justify-content:center;
   width:190px;
   height:50px;
-  background-color: black;
   margin:10px;
   border-radius: 25px;
+  background-color: #E1AB99;
 }
 .Button a {
   text-decoration: none;
