--- a/filter/src/components/footer/footer.css
+++ b/filter/src/components/footer/footer.css
@@ -4,10 +4,26 @@
   background-color: black;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+.list
+{
+  margin:10px;
+  padding:20px;
+  width:50%;
+  border: solid white 2px;
 }
 li
 {
   list-style: none;
   margin: 10px;
   color: white;
+}
+.footer_icon
+{
+  width:62px;
+  height:41px;
+  background-image: url('../assets/icons/OP.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
