--- a/filter/src/components/form/form.css
+++ b/filter/src/components/form/form.css
@@ -1,13 +1,17 @@
 .Form
 {
+  padding:15px;
   display:flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-image: url('../assets/images/konto_mobil.png');
 }
 .Form input
 {
   display:block;
   margin:10px;
+  margin-top: 30px;
   width:80vw;
+  height:5vh;
 }
