--- a/filter/src/components/info/info.css
+++ b/filter/src/components/info/info.css
@@ -1,5 +1,6 @@
 .info
 {
+  background-color: #252525;
   display:flex;
   flex-direction: column;
   justify-content:center;
@@ -42,4 +43,13 @@ text-align: left;
 }
 hr {
   width:70%;
+}
+.devices
+{
+padding:60px;
+  width: 327px;
+  height:210px;
+  background-image: url('../assets/icons/enheter.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
