--- a/filter/src/components/start/start.css
+++ b/filter/src/components/start/start.css
@@ -4,8 +4,10 @@
   flex-direction: column;
   align-items: center;
   justify-content:center;
-  margin-top: 50px;
-  height: 100vh;
+  height: 94vh;
+  background-image: url('../assets/images/hero_phone.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .magazine
 {
