--- a/filter/src/components/info/info.css
+++ b/filter/src/components/info/info.css
@@ -3,32 +3,39 @@
   background-color: #252525;
   display:flex;
   flex-direction: column;
-  justify-content:center;
 }
 .More
 {
-background-color: white;
-padding:10px;
-color: black;
-height:20vh;
-text-align: center;
+  background-color: white;
+  padding:10px;
+  color: black;
+  height:20vh;
 }
 .More p
 {
-margin-left: auto;
-margin-right: auto;
-width:75%;
+  margin-left: auto;
+  margin-right: auto;
+  width:75%;
 }
 .Why
 {
-height:20vh;
-margin-left: 50px;
-margin-bottom: 10px;
-text-align: left;
+  height:27vh;
+  text-align: left;
+  background-color: #E1AB99;
 }
 .Why p
 {
+  float:right;
   width:85%;
+}
+.checkbox
+{
+  height:20px;
+  width:20px;
+  background-image: url('../assets/icons/checkbox.svg');
+  margin:10px;
+  margin-top:30px;
+  float:left
 }
 .How
 {
@@ -39,17 +46,54 @@ text-align: left;
   align-items: center;
   justify-content:center;
   padding:15px;
-
 }
-hr {
+hr
+{
   width:70%;
 }
 .devices
 {
-padding:60px;
+  padding:60px;
   width: 327px;
   height:210px;
   background-image: url('../assets/icons/enheter.png');
   background-repeat: no-repeat;
   background-size: contain;
+}
+.read
+{
+  height:30vh;
+  padding:20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+  color:#E1AB99;
+}
+.read h1
+{
+  font-size: 80px;
+  margin:10px;
+}
+.read p
+{
+  font-size:20px;
+  width:100px;
+}
+.first
+{
+  margin-right:60px;
+}
+.last
+{
+  margin-left:100px;
+}
+.getStarted
+{
+  height:25vh;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content:center;
+  background-color: white;
 }
