added article view

--- a/filter/src/components/global/footer/footer.css
+++ b/filter/src/components/global/footer/footer.css
@@ -23,7 +23,7 @@ li
 {
   width:62px;
   height:41px;
-  background-image: url('../assets/icons/OP.png');
+  background-image: url('../../assets/icons/OP.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
