--- a/filter/src/components/sections/info/info.css
+++ b/filter/src/components/sections/info/info.css
@@ -32,7 +32,7 @@
 {
   height:20px;
   width:20px;
-  background-image: url('../assets/icons/checkbox.svg');
+  background-image: url('../../assets/icons/checkbox.svg');
   margin:10px;
   margin-top:30px;
   float:left
@@ -56,7 +56,7 @@ hr
   padding:60px;
   width: 327px;
   height:210px;
-  background-image: url('../assets/icons/enheter.png');
+  background-image: url('../../assets/icons/enheter.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
